removed bin from repo, updated help

--- a/xres.1
+++ b/xres.1
@@ -8,7 +8,7 @@ xres \- print X display name and resolution
 [\fI-adr\fR]
 .SH DESCRIPTION
 .PP
-Print display information (resolution by default).
+Print display name and resolution.
 .TP
 \fB\-a\fR
 print ALL info, same as -dr
